@@ -2996,6 +2996,8 @@ case "$host" in
     ;;
 esac
 
+AC_DEFINE_DIR(NTP_KEYSDIR, sysconfdir , [Default location of crypto key info])
+
 # This is necessary so that .o files in LIBOBJS are also built via
 # the ANSI2KNR-filtering rules.
 LIBOBJS=`echo $LIBOBJS|sed 's/\.o /\$U.o /g;s/\.o$/\$U.o/'`
